--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  equatable: ^2.0.3
+  injectable: ^1.4.1
+  get_it:
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^7.1.0
+  bloc_test: ^8.1.0
+  json_serializable:
+  http: ^0.13.3
+  dartz: ^0.10.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  injectable_generator: ^1.4.1
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
