--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   json_serializable:
   http: ^0.13.3
   dartz: ^0.10.0
+  connectivity_plus: ^1.0.7
 
 dev_dependencies:
   flutter_test:
